--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,41 +1,80 @@
-#set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "xterm"
 set-option -g history-limit 50000
-#set-option -g status-bg black
+set-option -g status-bg black
 #set-option -g status-fg white
 set-option -g status-interval 60
 set-option -g status-left-length 30
 #set-option -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
-#set-option -g status-right '#[fg=red]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=red]%H:%M#[default]'
+set-option -g status-left '#[fg=green](#S) Ramon'
+set-option -g status-right '#[fg=red]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=red]%H:%M#[default]'
 
 
-#### COLOUR
+# Toggle mouse on with ^B m
+bind m \
+   set -g mode-mouse on \;\
+   set -g mouse-resize-pane on \;\
+   set -g mouse-select-pane on \;\
+   set -g mouse-select-window on \;\
+   display 'Mouse: ON'
+
+# Toggle mouse off with ^B M
+bind M \
+   set -g mode-mouse off \;\
+   set -g mouse-resize-pane off \;\
+   set -g mouse-select-pane off \;\
+   set -g mouse-select-window off \;\
+   display 'Mouse: OFF'
+
+# pane movement
+bind-key j command-prompt -p "join pane (below) from:"  "join-pane -s '%%'"
+bind-key J command-prompt -p "join pane (to the right) from:"  "join-pane -h -s '%%'"
+bind-key k command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# Allow tmux to copy to the system clipboard, requires xclip
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+
+set-option lock-server on
+set-option lock-after-time 1200
+set-option lock-command vlock
+bind-key z lock
+bind-key -n        C-n     next-window             # next window
+bind-key -n        C-h     previous-window         # prev window
+bind-key -n        C-t     select-pane -t :.+      # next pane
+bind-key -n        C-y     setw synchronize-panes  # broadcast mode on/off
+bind-key -n        C-Up    resize-pane -U          # resize pain using C-arrows
+bind-key -n        C-Down  resize-pane -D
+bind-key -n        C-Left  resize-pane -L
+bind-key -n        C-Right resize-pane -R
+
+
+#### COLOR
 
 # default statusbar colors
-#set-option -g status-bg colour235 #base02
-#set-option -g status-fg colour136 #yellow
-#set-option -g status-attr default
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
 # default window title colors
-#set-window-option -g window-status-fg colour244
-#set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-fg colour244
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
 # active window title colors
-#set-window-option -g window-status-current-fg colour166 #orange
-#set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
 
 # pane border
-#set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
 
 # message text
-#set-option -g message-bg colour235 #base02
-#set-option -g message-fg colour166 #orange
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
 
 # pane number display
-#set-option -g display-panes-active-colour colour33 #blue
-#set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
 # clock
-#set-window-option -g clock-mode-colour colour64 #green
+set-window-option -g clock-mode-colour colour64 #green
