Adding a common role that will also do things I'd like on all servers, like install common packages

--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -1,5 +1,6 @@
 - hosts: all
 
   roles:
+    - { role: common, tags: common }
     - { role: add_user, tags: add_user }
     - { role: hostname, tags: hostname }
