Update the hostname role to also include an entry in the hosts file for the new hostname

--- a/ansible/playbooks/hostname/tasks/main.yml
+++ b/ansible/playbooks/hostname/tasks/main.yml
@@ -3,3 +3,9 @@
   become: yes
   ansible.builtin.hostname:
     name: "{{ inventory_hostname }}"
+
+- name: Update hosts file to know the new hostname
+  lineinfile:
+    dest: /etc/hosts
+    line: "{{ 127.0.0.1 }}    {{ inventory_hostname }}"
+    regexp: "^{{ item.ip }}    {{ inventory_hostname }}$"
