Ran through the MS Rust Beginners video series on youtube

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,4 +8,9 @@ members = [
     "enum_example",
     "structs",
     "control_flow",
+    "loops",
+    "errors",
+    "strings",
+    "collections",
+    "traits",
 ]
