Adding an update role to keep things fresh and "patched"

--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -4,3 +4,4 @@
     - { role: common, tags: common }
     - { role: add_user, tags: add_user }
     - { role: hostname, tags: hostname }
+    - { role: update, tags: update }
