--- a/ansible/playbooks/roles/dnsmasq/tasks/main.yml
+++ b/ansible/playbooks/roles/dnsmasq/tasks/main.yml
@@ -1,10 +1,12 @@
 ---
 - name: Install dnsmasq package
+  become: yes
   package:
     name: dnsmasq
     state: present
 
 - name: Deploy dnsmasq config
+  become: yes
   template:
     src: dnsmasq.conf.j2
     dest: /etc/dnsmasq.conf
@@ -12,6 +14,7 @@
   notify: restart dnsmasq
 
 - name: Update hosts file
+  become: yes
   lineinfile:
     dest: /etc/hosts
     line: "{{ item.ip }}    {{ item.host }}"
@@ -19,6 +22,7 @@
   loop: "{{ hosts }}"
 
 - name: Make sure Dnsmasq is running
+  become: yes
   service:
     name: dnsmasq
     state: started
