The new Red Hat Ansible extension for VS Code said this was wrong -- tconverting to a value it was happy with

--- a/ansible/playbooks/roles/update/tasks/main.yml
+++ b/ansible/playbooks/roles/update/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: Update packages on Centos host
-  become: yes
+  become: True
   yum:
     name: "*"
     state: latest
-  when: ansible_distribution == "Centos"
+  when: ansible_distribution == "CentOS"
 
 - name: Update packages on Raspberry host
-  become: yes
+  become: True
   apt:
     upgrade: yes
     update_cache: yes
