Adding a task to the common role to make sure the timezone is set "correctly"

--- a/ansible/playbooks/roles/common/tasks/main.yml
+++ b/ansible/playbooks/roles/common/tasks/main.yml
@@ -34,3 +34,11 @@
   when: 
     - ansible_distribution == "Debian"
     - pi_user.rc == 0
+
+- name: Make sure the timezone is set to Easter on a pi
+  become: yes
+  tags: 
+    - common
+    - common_timezone
+  community.general.timezone:
+    name: US/Eastern
