--- a/ansible/playbooks/roles/workstation/tasks/ubuntu.yml
+++ b/ansible/playbooks/roles/workstation/tasks/ubuntu.yml
@@ -7,6 +7,7 @@
 
 - name: Make sure to add my public key for ssh-key auth
   become: true
+  tags: ssh_keys
   authorized_key:
     user: ramon
     key: "{{ item }}"
@@ -28,6 +29,7 @@
 #     name:
 
 - name: Clone dotfile repo
+  tags: stow
   ansible.builtin.git:
     repo: "ssh://git@github.com/rjgonza/dotfiles.git"
     dest: "/home/ramon/repos/dotfiles"
@@ -35,9 +37,10 @@
     update: true
 
 - name: Run stow
+  tags: stow
   shell: "cd /home/ramon/repos/dotfiles; make install"
   register: result
-  changed_when: 'result.stderr is search("LINK: ")'
+  changed_when: false
 
 - name: Add Brave apt repo and key
   become: true
@@ -58,8 +61,10 @@
   connection: local
   block:
     - name: Check if cargo is installed
-      ansible.builtin.shell: cargo
+      tags: rust
+      ansible.builtin.shell: which cargo
       register: cargo_output
+      changed_when: false
       ignore_errors: true
 
     - name: Download rust installer
@@ -73,6 +78,49 @@
     - name: Install rust from the installer
       when: cargo_output is failed
       ansible.builtin.shell: /tmp/sh.rustup.rs -y
+
+- name: Download and Install PrusaSlicer
+  connection: local
+  tags: prusaSlicer
+  block:
+    - name: Check if we have the PrusaSlicer installed
+      ansible.builtin.stat:
+        path: "{{ item }}"
+      with_fileglob: "{{ workstation_prusaSlicer_directory }}*AppImage"
+      register: prusaSlicer_output
+      ignore_errors: true
+
+    - name: Download PrusaSlicer
+      when: prusaSlicer_output.results == []
+      ansible.builtin.get_url:
+        url: "{{ workstation_prusaSlicer_url }}"
+        dest: /tmp/prusaSlicer
+        mode: "0755"
+        force: true
+
+    - name: Make sure we have the prusaSlicer directory
+      become: true
+      when: prusaSlicer_output.results == []
+      ansible.builtin.file:
+        path: "{{ workstation_prusaSlicer_directory }}"
+        state: directory
+        mode: "0755"
+
+    - name: Unpack the prusaSlicer
+      become: true
+      when: prusaSlicer_output.results == []
+      ansible.builtin.unarchive:
+          src: /tmp/prusaSlicer
+          dest: "{{ workstation_prusaSlicer_directory }}"
+          remote_src: true
+
+    - name: Change the appImage to executable
+      become: true
+      when: prusaSlicer_output is failed
+      ansible.builtin.file:
+        dest: "{{ item }}"
+        mode: "0755"
+      with_fileglob: "{{ workstation_prusaSlicer_directory }}*.AppImage"
 
 - name: Install packages
   become: true
