Removing the prompt, it was cool, but I think passing on the command line is better

--- a/ansible/playbooks/workstation.yml
+++ b/ansible/playbooks/workstation.yml
@@ -1,4 +1,8 @@
 - name: Do the workstation!
   hosts: localhost
+  # vars_prompt:
+  #   - name: workstation_wireless_network_password
+  #     prompt: "wifi password"
+
   roles:
     - { role: workstation, tags: workstation }
